# llm-eval-framework

./: .env.example  .gitignore  README.md  docker-compose.yml  generate_pdf.py  pyproject.toml  qdrant_test.py  requirements.txt
.github/workflows/: eval_ci.yml
backend/: __init__.py  main.py  rag_pipeline.py
dashboard/: __init__.py  app.py
docs/: architecture.md
eval/: __init__.py  deepeval_eval.py  eval_dataset.py  metrics.py  ragas_eval.py  run_evaluation.py
experiments/: __init__.py  tracker.py
ingestion/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py  vector_store.py
tests/: __init__.py  conftest.py  test_eval.py  test_ingestion.py  test_vector_store.py
