[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-eval-framework"
version = "0.1.0"
description = "Production-grade LLM evaluation framework for RAG systems"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "langchain",
  "langchain-groq",
  "langchain-google-genai",
  "langchain-community",
  "langchain-openai",
  "langchain-qdrant",
  "langchain-experimental",
  "langchain-text-splitters",
  "numpy",
  "ragas",
  "datasets",
  "deepeval",
  "qdrant-client",
  "openai",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "pypdf",
  "tiktoken",
  "sentence-transformers",
  "wandb",
  "streamlit",
  "plotly",
  "pandas",
  "reportlab",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "black",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["backend", "dashboard", "eval", "experiments", "ingestion"]
